--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -16,4 +16,7 @@
 <resources>
     <!-- Application name -->
     <string name="crdroid_app_name" translatable="false">crDroid Home</string>
+
+    <!-- Folder titles -->
+    <string name="google_folder_title" translatable="false">Google</string>
 </resources>
