Launcher3: Import CustomSeekBarPreference from crdroid
Commit History:
https://github.com/crdroidandroid/android_packages_apps_crDroidSettings/commits/11.0/src/com/crdroid/settings/preferences/CustomSeekBarPreference.java

Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -86,4 +86,10 @@
     <string name="icon_pack_default_label">Default</string>
     <string name="icon_pack_add">Install more</string>
     <string name="icon_pack_no_market">There\'s no available app store</string>
+
+    <!-- Custom seekbar -->
+    <string name="custom_seekbar_value">Value: <xliff:g id="v">%s</xliff:g></string>
+    <string name="custom_seekbar_default_value">by default</string>
+    <string name="custom_seekbar_default_value_to_set">Default value: <xliff:g id="v">%s</xliff:g>\nLong tap to set</string>
+    <string name="custom_seekbar_default_value_is_set">Default value is set</string>
 </resources>
