--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -111,4 +111,5 @@
     <string name="dock_search_summary">Show search bar in the bottom dock</string>
     <string name="dock_theme_title">Themed icons</string>
     <string name="dock_theme_summary">Use themed icons for search bar</string>
+    <string name="search_radius_title">Corner radius</string>
 </resources>
