Launcher3: Introduce memory info in overview
This is convenient for monitoring device status and many OEMs have their design for this. It's time to have our own one.

[PacMM79: Adapt to crdroid launcher. Update quickstep overview actions dimens.xml]

Change-Id: I890c86c798055b1964506d9a4df1cef386562160
Signed-off-by: LibXZR <i@xzr.moe>
iusmac: adapt to A13.
Signed-off-by: iusmac <iusico.maxim@libero.it>

--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -283,4 +283,7 @@
     <string name="icon_pack_default_label">Default</string>
     <string name="icon_pack_add">Install more</string>
     <string name="icon_pack_no_market">There\'s no available app store</string>
+
+    <!-- Memory info -->
+    <string name="meminfo_text">%1$s Available | %2$s Total</string>
 </resources>
