--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -153,12 +153,11 @@
     <string name="hotseat_bg_summary">Add translucent background to the app dock</string>
 
     <!-- AppInfo -->
-    <string name="app_info_subtext" translatable="false">Swipe down to close app info.</string>
+    <string name="app_info_subtext">Swipe down to close app info</string>
     <string name="app_info_version_value" translatable="false">%1$s (%2$d)</string>
-    <string name="placeholder_string" translatable="false">Loading...</string> <!-- Used for preference height loading. -->
-    <string name="app_info_source" translatable="false">Source</string>
-    <string name="app_info_source_system" translatable="false">System</string>
-    <string name="app_info_last_update" translatable="false">Last update</string>
-    <string name="app_info_version" translatable="false">Version</string>
-    <string name="app_info_more" translatable="false">More</string>
+    <string name="app_info_source">Source</string>
+    <string name="app_info_source_system">System</string>
+    <string name="app_info_last_update">Last update</string>
+    <string name="app_info_version">Version</string>
+    <string name="app_info_more">More</string>
 </resources>
