--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -131,4 +131,7 @@
 
     <!-- Homescreen Statusbar -->
     <string name="show_statusbar_title">Status Bar</string>
+
+    <!-- Top shadow -->
+    <string name="show_top_shadow">Top shadow</string>
 </resources>
