--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -137,4 +137,8 @@
 
     <!-- Row Height -->
     <string name="row_height_title">Row height</string>
+    
+    <!-- Background blur -->
+    <string name="background_blur_title">Background blur depth</string>
+    <string name="background_blur_summary">Set blur depth level for recents and app drawer</string>
 </resources>
