--- a/res/values-ko-rKR/cr_strings.xml
+++ b/res/values-ko-rKR/cr_strings.xml
@@ -114,9 +114,12 @@
     <string name="recents_clear_all_title">모두 지우기</string>
     <string name="recents_lens_title">렌즈</string>
     <!-- Background blur -->
-    <string name="background_blur_title">Background blur depth</string>
-    <string name="background_blur_desc">Set blur depth level for recents and app drawer</string>
+    <string name="background_blur_title">배경 흐림</string>
+    <string name="background_blur_desc">최근 앱과 앱 서랍에서 블러 깊이 레벨 설정</string>
     <!-- Memory info -->
-    <string name="meminfo_text">%1$s Available | %2$s Total</string>
-    <string name="recents_meminfo_title">Memory info</string>
+    <string name="meminfo_text">가용 %1$s | 총 %2$s</string>
+    <string name="recents_meminfo_title">메모리 정보</string>
+    <!-- Hotseat Background -->
+    <string name="hotseat_bg_title">Hotseat background</string>
+    <string name="hotseat_bg_summary">Add translucent background to the app dock</string>
 </resources>
