--- a/res/values-ru-rRU/cr_strings.xml
+++ b/res/values-ru-rRU/cr_strings.xml
@@ -115,8 +115,11 @@
     <string name="recents_lens_title">Объектив</string>
     <!-- Background blur -->
     <string name="background_blur_title">Размытие фона</string>
-    <string name="background_blur_desc">Установка глубины размытия для недавних приложений и меню приложений</string>
+    <string name="background_blur_desc">Установка глубины размытия для недавних и меню приложений</string>
     <!-- Memory info -->
     <string name="meminfo_text">Доступно: %1$s | Всего: %2$s</string>
     <string name="recents_meminfo_title">Информация о памяти</string>
+    <!-- Hotseat Background -->
+    <string name="hotseat_bg_title">Фон нижней панели</string>
+    <string name="hotseat_bg_summary">Полупрозрачный фон нижней панели приложений</string>
 </resources>
