--- a/res/values-zh-rCN/cr_strings.xml
+++ b/res/values-zh-rCN/cr_strings.xml
@@ -114,9 +114,12 @@
     <string name="recents_clear_all_title">清除所有</string>
     <string name="recents_lens_title">镜头</string>
     <!-- Background blur -->
-    <string name="background_blur_title">Background blur depth</string>
-    <string name="background_blur_desc">Set blur depth level for recents and app drawer</string>
+    <string name="background_blur_title">背景模糊深度</string>
+    <string name="background_blur_desc">为最近任务和应用抽屉设置模糊深度级别</string>
     <!-- Memory info -->
-    <string name="meminfo_text">%1$s Available | %2$s Total</string>
-    <string name="recents_meminfo_title">Memory info</string>
+    <string name="meminfo_text">%1$s 可用 | %2$s 总计</string>
+    <string name="recents_meminfo_title">内存信息</string>
+    <!-- Hotseat Background -->
+    <string name="hotseat_bg_title">小部件背景</string>
+    <string name="hotseat_bg_summary">添加半透明背景到应用停靠栏</string>
 </resources>
