--- a/res/values-fa-rIR/cr_strings.xml
+++ b/res/values-fa-rIR/cr_strings.xml
@@ -119,4 +119,7 @@
     <!-- Memory info -->
     <string name="meminfo_text">%1$s در دسترس است / در کل %2$s</string>
     <string name="recents_meminfo_title">اطلاعات حافظه</string>
+    <!-- Hotseat Background -->
+    <string name="hotseat_bg_title">Hotseat background</string>
+    <string name="hotseat_bg_summary">Add translucent background to the app dock</string>
 </resources>
