--- a/res/values-it-rIT/cr_strings.xml
+++ b/res/values-it-rIT/cr_strings.xml
@@ -117,6 +117,9 @@
     <string name="background_blur_title">Profondità sfocatura sfondo</string>
     <string name="background_blur_desc">Imposta il livello di profondità della sfocatura per i recenti e il drawer delle app</string>
     <!-- Memory info -->
-    <string name="meminfo_text">%1$s Available | %2$s Total</string>
-    <string name="recents_meminfo_title">Memory info</string>
+    <string name="meminfo_text">%1$s Disponibile | %2$s Totale</string>
+    <string name="recents_meminfo_title">Informazioni sulla memoria</string>
+    <!-- Hotseat Background -->
+    <string name="hotseat_bg_title">Sfondo barra inferiore</string>
+    <string name="hotseat_bg_summary">Mostra lo sfondo trasparente nella barra dell\'app in basso</string>
 </resources>
