--- a/res/values-pt-rBR/cr_strings.xml
+++ b/res/values-pt-rBR/cr_strings.xml
@@ -118,5 +118,8 @@
     <string name="background_blur_desc">Definir a intensidade do desfoque para os aplicativos recentes e gaveta de aplicativos</string>
     <!-- Memory info -->
     <string name="meminfo_text">%1$s Disponível - %2$s Total</string>
-    <string name="recents_meminfo_title">Memory info</string>
+    <string name="recents_meminfo_title">Informações da memória</string>
+    <!-- Hotseat Background -->
+    <string name="hotseat_bg_title">Hotseat background</string>
+    <string name="hotseat_bg_summary">Adicionar fundo transparente para a gaveta de aplicativos</string>
 </resources>
