--- a/res/values-uk-rUA/cr_strings.xml
+++ b/res/values-uk-rUA/cr_strings.xml
@@ -117,6 +117,9 @@
     <string name="background_blur_title">Глибина розмиття фону</string>
     <string name="background_blur_desc">Встановити глибину розмиття для нещодавніх та меню додатків</string>
     <!-- Memory info -->
-    <string name="meminfo_text">%1$s Available | %2$s Total</string>
-    <string name="recents_meminfo_title">Memory info</string>
+    <string name="meminfo_text">%1$s Доступно | %2$s Загалом</string>
+    <string name="recents_meminfo_title">Інформація про пам\'ять</string>
+    <!-- Hotseat Background -->
+    <string name="hotseat_bg_title">Фон віджета</string>
+    <string name="hotseat_bg_summary">Додати напівпрозорий фон в панель додатка</string>
 </resources>
