New Crowdin updates (#268)
* New translations cr_strings.xml (Greek)

* New translations cr_strings.xml (Portuguese, Brazilian)

* New translations cr_strings.xml (Korean)

* New translations cr_strings.xml (Korean)

--- a/res/values-ko-rKR/cr_strings.xml
+++ b/res/values-ko-rKR/cr_strings.xml
@@ -120,6 +120,6 @@
     <string name="meminfo_text">가용 %1$s | 총 %2$s</string>
     <string name="recents_meminfo_title">메모리 정보</string>
     <!-- Hotseat Background -->
-    <string name="hotseat_bg_title">Hotseat background</string>
-    <string name="hotseat_bg_summary">Add translucent background to the app dock</string>
+    <string name="hotseat_bg_title">독 영역 배경</string>
+    <string name="hotseat_bg_summary">앱 서랍에 반투명 배경 추가</string>
 </resources>
