--- a/res/values-bg-rBG/cr_strings.xml
+++ b/res/values-bg-rBG/cr_strings.xml
@@ -29,7 +29,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="dev_options_title">Опции за разработчици</string>
     <string name="dev_options_desc">Активирайте някои скрити функции на собствен риск</string>
     <!-- QuickSpace -->
-    <string name="show_quickspace_title">At A Glance</string>
+    <string name="show_quickspace_title">Бърз поглед</string>
     <string name="show_quickspace_summary">Покажи в горната част на началния ви екран</string>
     <!-- QuickSpace: QuickEvent: Device Intro Event -->
     <string name="quick_event_rom_intro_welcome">Добре дошъл в crDroid!</string>
@@ -47,10 +47,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="quick_event_ambient_song_artist">%1$s от %2$s</string>
     <!-- Quickspace Now Playing -->
     <string name="quickspace_now_playing_title">Покажи какво се изпълнява</string>
-    <string name="quickspace_now_playing_summary">Shows the song you\'re playing on At a Glance.</string>
+    <string name="quickspace_now_playing_summary">Показване на текуща песен в режим \"Бърз Поглед\"</string>
     <!-- Quickspace alternative view -->
     <string name="quickspace_alternate_style_title">Използвай алтернативен стил</string>
-    <string name="quickspace_alternate_style_summary">Use a minimalistic style for At a Glance</string>
+    <string name="quickspace_alternate_style_summary">Използване на минимален стил за \"Бърз Поглед\"</string>
     <!-- Icon packs -->
     <string name="icon_pack">Пакет икони</string>
     <!-- DT2S -->
@@ -58,7 +58,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     <string name="pref_sleep_gesture_summary">Докоснете двата пъти на празно място за изключване</string>
     <!-- Quickspace PSA - Custom messages for the glance -->
     <string name="quickspace_psa_title">Покажи случайни съобщения</string>
-    <string name="quickspace_psa_summary">Show some nice messages sometimes on At a Glance.</string>
+    <string name="quickspace_psa_summary">Показване на хубави съобщения в режим \"Бърз Поглед\"</string>
     <string-array name="quickspace_psa_morning">
         <item>Добро утро!</item>
         <item>Добро утро, време е за рок!</item>
@@ -117,13 +117,13 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <item>Как върви?</item>
         <item>Без илюзии, добре дошли в реалността!</item>
         <item>Благодарим ви за подкрепата</item>
-        <item>No festival for Derps - only perfection!</item>
+        <item>Не е фестивал за пустиняци - само перфе</item>
         <item>Една от най-добрите разработки</item>
         <item>Разум за вашата параноя</item>
         <item>Опитайте Ice Cold десерти</item>
         <item>Какво прекрасно преживяване, нали?</item>
         <item>Еволюцията е мит, нали?</item>
-        <item>You are what you flash, don\'t be Potato</item>
+        <item>Ти си това което показваш, не бъди ботор.</item>
         <item>Какво мислите?</item>
         <item>Победител, Победител ....?</item>
         <item>rm -rf \/</item>
