--- a/res/values-ku-rTR/cr_strings.xml
+++ b/res/values-ku-rTR/cr_strings.xml
@@ -114,12 +114,12 @@
     <string name="recents_clear_all_title">Hemî paqij bike</string>
     <string name="recents_lens_title">Lens</string>
     <!-- Background blur -->
-    <string name="background_blur_title">Background blur depth</string>
-    <string name="background_blur_desc">Set blur depth level for recents and app drawer</string>
+    <string name="background_blur_title">Kûrahiya paşîn</string>
+    <string name="background_blur_desc">Ji bo dawîn û berkêşana sepanê asta kûrahiya şengiyê bicîh bikin</string>
     <!-- Memory info -->
-    <string name="meminfo_text">%1$s Available | %2$s Total</string>
-    <string name="recents_meminfo_title">Memory info</string>
+    <string name="meminfo_text">%1$s Berdest e | %2$s Bi tevahî</string>
+    <string name="recents_meminfo_title">Agahdariya bîranînê</string>
     <!-- Hotseat Background -->
-    <string name="hotseat_bg_title">Hotseat background</string>
-    <string name="hotseat_bg_summary">Add translucent background to the app dock</string>
+    <string name="hotseat_bg_title">Paşxaneya Hotseat</string>
+    <string name="hotseat_bg_summary">Paşnava şefaf li qereqola sepanê zêde bikin</string>
 </resources>
