fixup! Launcher3: Add Oplus camera for hotseat resolve
* This led us to black screen...

Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/res/xml/dw_hotseat_6.xml
+++ b/res/xml/dw_hotseat_6.xml
@@ -85,7 +85,7 @@
             launcher:className="com.oneplus.camera.OPCameraActivity" />
         <favorite
             launcher:packageName="com.oplus.camera"
-            launcher:className="com.oplus.camera.CameraImageActivity" />
+            launcher:className="com.oplus.camera.Camera" />
     </resolve>
 
 </favorites>
