--- a/res/xml/dw_hotseat_5.xml
+++ b/res/xml/dw_hotseat_5.xml
@@ -76,7 +76,7 @@
             launcher:className="com.oneplus.camera.OPCameraActivity" />
         <favorite
             launcher:packageName="com.oplus.camera"
-            launcher:className="com.oplus.camera.CameraImageActivity" />
+            launcher:className="com.oplus.camera.Camera" />
     </resolve>
 
 </favorites>
