--- a/res/layout/all_apps_empty_search.xml
+++ b/res/layout/all_apps_empty_search.xml
@@ -24,7 +24,7 @@
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:fontFamily="@*android:string/config_bodyFontFamilyMedium"
-    android:textSize="14sp"
-    android:textColor="?android:attr/textColorTertiary"
+    android:textSize="16sp"
+    android:textColor="?android:attr/textColorPrimaryInverse"
     android:focusable="false" />
 
